--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-red-dashboard",
-    "version": "2.30.0",
+    "version": "0.0.1.",
     "description": "A set of dashboard nodes for Node-RED",
     "keywords": [
         "node-red"
